yamls/10-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      # nodePort: 30080   # uncomment to pin a fixed port (range 30000-32767)
